05_autoscaling/01_kubernetes/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
  labels:
    name: podinfo-service
    app: podinfo
spec:
  selector:
    name: podinfo-pod
    app: podinfo
  ports:
  - port: 80
    targetPort: 9898
  type: LoadBalancer
